--- a/css/chufangzhanshi.css
+++ b/css/chufangzhanshi.css
@@ -322,7 +322,8 @@
 	font-weight: normal;
 	font-family: "Microsoft Yahei";
 	margin-left: 30px;
-	border-bottom: 1px solid #e6e6e6;
+	border-bottom: 2px dashed #e6e6e6;
+	
 }
 .zhuti{
 	
