--- a/css/public.css
+++ b/css/public.css
@@ -1,6 +1,10 @@
 *{
-	margin: 0;
-	list-style: none;
+	margin: 0;/* body-8px;*/
 	padding: 0;
+	text-decoration-line:   none; 
 	font-style: normal;
+	list-style: none;
+	
+	outline: none;
+	/* box-sizing: border-box; */
 }
